Fix layout issue

--- a/src/main/assets/amiko_stylesheet.css
+++ b/src/main/assets/amiko_stylesheet.css
@@ -1,8 +1,8 @@
 #menue{z-index:1;position:fixed;left:0px;top:0px;}
 #monographie{
     margin-left:5px;margin-right:5px;margin-top:20px;margin-bottom:20px;font-family:"Verdana","Arial","Tahoma","Helvetica","Geneva","sans-serif";color:black;
-    word-break: break-all;
-    width:700px;
+    overflow-wrap: break-word;
+    width: 100%;
 }
 #monographie .MonTitle{font-size:1.5em;font-weight:bold;margin-bottom:0.2em;}
 #monographie .absTitle{font-size:0.9em;font-weight:bold;font-style:italic;margin-bottom:0.0em;}
@@ -23,7 +23,7 @@
 #monographie table{
 font-family:"Courier New","sans-serif";font-size:0.9em;margin-top:1.0em;margin-bottom:1.0em;border-top:solid 1px black;border-bottom:solid 1px black;
 max-width: 100%;
-word-break: break-all;
+overflow-wrap: break-word;
 }
 #monographie td{font-family:"Courier New","sans-serif";font-size:0.9em;}
 .rowSepBelow{border-bottom:solid 1px black;}
