--- a/src/main/assets/amiko_stylesheet_phone.css
+++ b/src/main/assets/amiko_stylesheet_phone.css
@@ -1,7 +1,7 @@
 #menue{z-index:1;position:fixed;left:0px;top:0px;}
 #monographie{
 margin-left:5px;margin-right:5px;margin-top:20px;margin-bottom:20px;font-family:"Verdana","Arial","Tahoma","Helvetica","Geneva","sans-serif";color:black;
-word-break: break-all;
+overflow-wrap: break-word;
 width:700px;
 }
 #monographie .MonTitle{font-size:1.8em;font-weight:bold;margin-bottom:0.2em;}
@@ -22,7 +22,7 @@ width:700px;
 #monographie .image{margin-top:20px;margin-bottom:20px;}
 #monographie table{font-family:"Courier New","sans-serif";font-size:0.9em;margin-top:1.0em;margin-bottom:1.0em;border-top:solid 1px black;border-bottom:solid 1px black;
 max-width: 100%;
-word-break: break-all;
+overflow-wrap: break-word;
 }
 #monographie td{font-family:"Courier New","sans-serif";font-size:0.9em;}
 .rowSepBelow{border-bottom:solid 1px black;}
